Fix color contrast

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ $content-width:    42rem;
 
 $color-black:      #292929;
 $color-white:      #fff;
-$color-grey:       #828282;
+$color-grey:       #757575;
 $color-grey-light: lighten($color-grey, 40%);
 $color-grey-dark:  darken($color-grey, 25%);
 
